k8/eks-service.yml
apiVersion: v1
kind: Service
metadata:
  name: rdicidr-service
  namespace: production
spec:
  type: ClusterIP
  ports:
  - port: 8080
    targetPort: 80
    protocol: TCP
    name: http
  selector:
    app: rdicidr
